hotkeys now also work in-game and are configurable in the options menu. Achieved through integrating with butterlib

--- a/TitlesForLords/Bannerlord.TitlesForLords.csproj
+++ b/TitlesForLords/Bannerlord.TitlesForLords.csproj
@@ -35,6 +35,12 @@
 
 
 	<ItemGroup>
+		<Reference Include="Bannerlord.ButterLib">
+		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Mount &amp; Blade II Bannerlord\Modules\Bannerlord.ButterLib\bin\Win64_Shipping_Client\Bannerlord.ButterLib.dll</HintPath>
+		</Reference>
+		<Reference Include="Bannerlord.ButterLib.Implementation.1.2.4">
+		  <HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Mount &amp; Blade II Bannerlord\Modules\Bannerlord.ButterLib\bin\Win64_Shipping_Client\Bannerlord.ButterLib.Implementation.1.2.4.dll</HintPath>
+		</Reference>
 		<Reference Include="SandBox">
 			<HintPath>..\..\..\..\..\..\Program Files (x86)\Steam\steamapps\common\Mount &amp; Blade II Bannerlord\Modules\SandBox\bin\Win64_Shipping_Client\SandBox.dll</HintPath>
 			<Private>False</Private>
